force-app/main/default/objects/Meeting_WF_Side_Effect__c/Meeting_WF_Side_Effect__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Side Effect</label>
    <nameField>
        <displayFormat>WFSE-{00000}</displayFormat>
        <label>Meeting WF Side Effect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Side Effects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>