force-app/main/default/objects/Meeting_WF_Side_Effect__c/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <description>Meeting WF config</description>
    <label>Config JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>