force-app/main/default/objects/Meeting_WF_Side_Effect__c/fields/Effect_Type__c.field-meta.xml
<CustomField>
    <fullName>Effect_Type__c</fullName>
    <description>Meeting WF config</description>
    <label>Effect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notify</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>SetFlags</fullName>
            </value>
            <value>
                <fullName>WriteHistory</fullName>
                <default>true</default>
                <label>WriteHistory</label>
            </value>
            <value>
                <fullName>RecalcActuals</fullName>
            </value>
            <value>
                <fullName>CustomInvocable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>